--- a/config/graham.yaml
+++ b/config/graham.yaml
@@ -1,5 +1,5 @@
 # Sample IDs as list
-samples: ../../sequencing-prep/resources/low1_sampleSheet.txt
+samples: ../resources/glue_allSamples_sampleSheet.txt
 chromosomes: ../resources/chromosome_file.txt
 
 # Multiple paths to raw reads is a hotfix until reads are on Genbank
@@ -15,12 +15,4 @@ files:
 
 cluster:
   cores_per_node: 32
-
-species_id:
-  num_nt_db_files: 33  # Number of database files for NCBI's nt database (ftp://ftp.ncbi.nlm.nih.gov/blast/db/)
-
-# Parameters for variant calling and SFS estimation with ANGSD
-angsd:
-  max_dp: 1250  # 2 x mean coverage from qualimap x # samples
-
 
