--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -11,20 +11,18 @@ from snakemake.utils import min_version
 ###############
 
 # Require at least this version
-min_version('5.26.1')
+min_version('7.21.0')
 
 # Defailt configfile. Can be changed at command-line (--configfile)
 configfile: '../config/graham.yaml'
 
 SAMPLE_SHEET_DF = pd.read_table(config['samples'], sep='\t')
+REFERENCE_GENOME = config['ref']
 
 # Sample and chromosome info
 SAMPLES = SAMPLE_SHEET_DF['sample'].tolist()
 TOR_SAMPLES = [x for x in SAMPLES if x.startswith('s_')]
 CHROMOSOMES = pd.read_table(config['chromosomes'], header=None).iloc[:,0].tolist()
-
-# Reference genome and annotation
-GFF_FILE = ancient(config['gff'])
 
 # Paths for output files
 TMPDIR = config['temp_dir']
@@ -44,16 +42,14 @@ wildcard_constraints:
     chrom='|'.join([x for x in CHROMOSOMES])
 
 # Rules to be run locally on as single process
-localrules: create_tmp_dir, downsample_toronto_done, index_toronto_bam, index_bam
+localrules: create_tmp_dir, index_bam
 
 # Pipeline targets
 # Each step generates an empty flagfile as its final target
 rule all:
    input:
         # Trimming, mapping, and QC
-        '{0}/multiqc/multiqc_report.html'.format(QC_DIR),
-        # Downsample Toronto data
-        '{0}/downsample_toronto.done'.format(BAM_DIR)
+        '{0}/multiqc/multiqc_report.html'.format(QC_DIR)
 
 # Create temporary directory used throughout pipeline
 rule create_tmp_dir:
@@ -68,4 +64,3 @@ include: 'rules/ref.smk'
 include: 'rules/trimming.smk'
 include: 'rules/mapping.smk'
 include: 'rules/qc.smk'
-include: 'rules/toronto_downsample.smk'
